--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=EthernetWebServer_STM32
-version=1.0.0
+version=1.0.1
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
 sentence=EthernetWebServer is a library for STM32 boards running WebServer using built-in Ethernet or Ethernet shields
-paragraph=The library supports HTTP GET and POST requests, provides argument parsing, handles one client at a time. It supports Arduino boards (STM32F series with 64+Kbytes of Flash) using built-in Ethernet (Nucleo-144: F429ZI, F767ZI, Discovery: STM32F746G-DISCOVERY) or ENC28j60 network shields.
+paragraph=The library supports HTTP GET and POST requests, provides argument parsing, handles one client at a time. It supports Arduino boards (STM32F series with 64+Kbytes of Flash) using built-in Ethernet (Nucleo-144: F429ZI, F767ZI, Discovery: STM32F746G-DISCOVERY), ENC28J60 or W5x00 Ethernet shields.
 category=Communication
 url=https://github.com/khoih-prog/EthernetWebServer_STM32
 architectures=stm32
