Add Functional-Vlpp dependency

--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ paragraph=The library supports HTTP GET and POST requests, provides argument par
 category=Communication
 url=https://github.com/khoih-prog/EthernetWebServer_STM32
 architectures=stm32
-depends=STM32duino,LwIP
+depends=STM32duino,LwIP,Functional-Vlpp
