--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=EthernetWebServer_STM32
-version=1.0.1
+version=1.0.2
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
@@ -8,4 +8,4 @@ paragraph=The library supports HTTP GET and POST requests, provides argument par
 category=Communication
 url=https://github.com/khoih-prog/EthernetWebServer_STM32
 architectures=stm32
-depends=STM32duino,LwIP,Functional-Vlpp
+depends=STM32duino,LwIP
