--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=EthernetWebServer_STM32
-version=1.0.3
+version=1.0.4
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
-sentence=EthernetWebServer_STM32 is a library for STM32F boards running WebServer using built-in Ethernet LAN8742A or Ethernet W5x00, ENC28J60 shields
-paragraph=The library supports HTTP GET and POST requests, provides argument parsing, handles one client at a time. It supports Arduino boards (STM32F series with 64+Kbytes of Flash) using built-in Ethernet (Nucleo-144: F429ZI, F767ZI, Discovery: STM32F746G-DISCOVERY), or ENC28J60, W5x00 Ethernet shields.
+sentence=EthernetWebServer_STM32 is a library for STM32F/L/H/G/WB/MP1 boards running WebServer using built-in Ethernet LAN8742A or Ethernet W5x00, ENC28J60 shields
+paragraph=The library supports HTTP GET and POST requests, provides argument parsing, handles one client at a time. It supports Arduino STM32F/L/H/G/WB/MP1 series with 32+ Kbytes of Flash, using built-in Ethernet (Nucleo-144: F429ZI, F767ZI, Discovery: STM32F746G-DISCOVERY), or ENC28J60, W5x00 Ethernet shields.
 category=Communication
 url=https://github.com/khoih-prog/EthernetWebServer_STM32
 architectures=stm32
