--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -35,6 +35,7 @@ lib_deps =
   EthernetLarge@~2.0.0
   Ethernet2@~1.0.4
   Ethernet3@~1.5.3
+  EthernetENC@~2.0.0
 
 build_flags =
 ; set your build_flags
