--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -27,6 +27,7 @@ upload_speed = 921600
 ;monitor_port = COM11
 
 lib_deps =
+; PlatformIO 4.x
   STM32duino LwIP@~2.1.2
   STM32duino STM32Ethernet@~1.2.0
   Functional-Vlpp@~1.0.1
@@ -36,7 +37,17 @@ lib_deps =
   Ethernet2@~1.0.4
   Ethernet3@~1.5.3
   EthernetENC@~2.0.0
-
+; PlatformIO 5.x  
+;  stm32duino/STM32duino LwIP@~2.1.2
+;  stm32duino/STM32duino STM32Ethernet@~1.2.0
+;  khoih-prog/Functional-Vlpp@~1.0.1
+;  UIPEthernet/UIPEthernet@~2.0.8
+;  PaulStoffregen/Ethernet@~2.0.0
+;  PaulStoffregen/EthernetLarge@~2.0.0
+;  adafruit/Ethernet2@~1.0.4
+;  sstaub/Ethernet3@~1.5.3
+;  jandrassy/EthernetENC@~2.0.0
+  
 build_flags =
 ; set your build_flags
  
