--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,12 @@
 name=EthernetWebServer_STM32
-version=1.0.6
+version=1.1.0
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
-sentence=EthernetWebServer_STM32 is a library for STM32F/L/H/G/WB/MP1 boards running WebServer using built-in Ethernet LAN8742A, Ethernet W5x00 or ENC28J60 shields
-paragraph=The library supports HTTP GET and POST requests, provides argument parsing, handles one client at a time. It supports Arduino STM32F/L/H/G/WB/MP1 series with 32+ Kbytes of Flash, using built-in Ethernet (Nucleo-144: F429ZI, F767ZI, Discovery: STM32F746G-DISCOVERY), or ENC28J60, W5x00 Ethernet shields.
+sentence=EthernetWebServer_STM32 is a simple Ethernet WebServer, HTTP Client and WebSocket Client library for STM32F/L/H/G/WB/MP1 boards using built-in Ethernet LAN8742A, Ethernet W5x00 or ENC28J60 shields
+paragraph=The library supports HTTP GET and POST requests, provides argument parsing, handles one client at a time. It now provides HTTP Client and WebSocket Client. It supports Arduino STM32F/L/H/G/WB/MP1 series with 32+ Kbytes of Flash, using built-in Ethernet (Nucleo-144: F429ZI, F767ZI, Discovery: STM32F746G-DISCOVERY), or ENC28J60, W5x00 Ethernet shields.
 category=Communication
 url=https://github.com/khoih-prog/EthernetWebServer_STM32
 architectures=stm32
 depends=STM32duino LwIP,STM32duino STM32Ethernet,Functional-Vlpp
+includes=EthernetWebServer_STM32.h,EthernetHttpClient_STM32.h
