--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -31,25 +31,27 @@ lib_compat_mode = strict
 
 lib_deps =
 ; PlatformIO 4.x
-  STM32duino LwIP@~2.1.2
-  STM32duino STM32Ethernet@~1.2.0
-  Functional-Vlpp@~1.0.2
-  UIPEthernet@~2.0.9
-  Ethernet@~2.0.0
-  EthernetLarge@~2.0.0
-  Ethernet2@~1.0.4
-  Ethernet3@~1.5.5
+;  STM32duino LwIP@~2.1.2
+;  STM32duino STM32Ethernet@~1.2.0
+;  Functional-Vlpp@~1.0.2
+;  UIPEthernet@~2.0.9
+;  Ethernet_Generic>=2.0.0
+;  Ethernet@~2.0.0
+;  EthernetLarge@~2.0.0
+;  Ethernet2@~1.0.4
+;  Ethernet3@~1.5.5
   EthernetENC@~2.0.2
 ; PlatformIO 5.x  
-;  stm32duino/STM32duino LwIP@~2.1.2
-;  stm32duino/STM32duino STM32Ethernet@~1.2.0
-;  khoih-prog/Functional-Vlpp@~1.0.2
-;  UIPEthernet/UIPEthernet@~2.0.9
+  stm32duino/STM32duino LwIP@~2.1.2
+  stm32duino/STM32duino STM32Ethernet@~1.2.0
+  khoih-prog/Functional-Vlpp@~1.0.2
+  khoih-prog/Ethernet_Generic@~2.0.0
+  UIPEthernet/UIPEthernet@~2.0.9
 ;  PaulStoffregen/Ethernet@~2.0.0
 ;  PaulStoffregen/EthernetLarge@~2.0.0
 ;  adafruit/Ethernet2@~1.0.4
 ;  sstaub/Ethernet3@~1.5.5
-;  jandrassy/EthernetENC@~2.0.2
+  jandrassy/EthernetENC@~2.0.2
   
 build_flags =
 ; set your build_flags
